--- a/cache-with-network-firebase/index.html
+++ b/cache-with-network-firebase/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#134687">
-    <title>List Personas</title>
+    <title>Notes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet"
         crossorigin="anonymous">
-    <link rel="manifest" href="https://matcrojas.github.io/Aplicaciones-Web-Progresivas/10b/practica11/manifest.json">
+    <link rel="manifest" href="https://mathcrojas.github.io/Aplicaciones-Web-Progresivas/cache-with-network-firebase/manifest.json">
 </head>
 
 <body>
@@ -101,25 +101,7 @@
         <h3>Mis notas</h3>
 
         <div id="cards">
-            <!-- <div class="card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-2">
-                            <img src="https://blogs.unsw.edu.au/nowideas/files/2020/03/eventos-corporativos.jpg"
-                                class="img-fluid rounded" alt="...">
-                        </div>
-                        <div class="col text-truncate">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                            galley of type and scrambled it to make a type specimen book. It has survived not only five
-                            centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-                            passages, and more recently with desktop publishing software like Aldus PageMaker including
-                            versions of Lorem Ipsum
-                        </div>
-                    </div>
-                </div>
-            </div> -->
+
         </div>
 
         <!-- Modal -->
@@ -178,7 +160,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.js"
         integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
-    <script src="https://matcrojas.github.io/Aplicaciones-Web-Progresivas/10b/practica11/js/camara.js"></script>
+    <script src="https://mathcrojas.github.io/Aplicaciones-Web-Progresivas/cache-with-network-firebase/js/camara.js"></script>
         <script type="module" src="https://matcrojas.github.io/Aplicaciones-Web-Progresivas/10b/practica11/js/app.js"></script>
 
 </body>
