--- a/cache-with-network-firebase/index.html
+++ b/cache-with-network-firebase/index.html
@@ -161,7 +161,7 @@
     <script src="https://code.jquery.com/jquery-3.6.1.js"
         integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="https://mathcrojas.github.io/Aplicaciones-Web-Progresivas/cache-with-network-firebase/js/camara.js"></script>
-        <script type="module" src="https://matcrojas.github.io/Aplicaciones-Web-Progresivas/10b/practica11/js/app.js"></script>
+        <script type="module" src="https://mathcrojas.github.io/Aplicaciones-Web-Progresivas/blob/main/cache-with-network-firebase/js/app.js"></script>
 
 </body>
 
